Add TarDataProvider docs

--- a/docs/mainpage.dox.tmpl
+++ b/docs/mainpage.dox.tmpl
@@ -197,7 +197,11 @@ hashdecl Qore::Tar::TarEntryInfo {
 
     @section tardataprovider Data Provider API
 
-    The \c TarDataProvider module provides integration with Qore's data provider framework:
+    The \c TarDataProvider module provides integration with Qore's data provider framework.
+    See the TarDataProvider module documentation for details:
+    @htmlonly
+    <a href="../../TarDataProvider/html/index.html">TarDataProvider module documentation</a>
+    @endhtmlonly
 
     @code{.py}
 %requires TarDataProvider
